# MG-alphaGCD

./: CMakeLists.txt  LICENSE  README.md
include/: common.h
include/coarsen_graph/: coarsen_graph_mg.cuh
include/graph/: gpu_graph.cuh  host_graph.h
include/louvain/: louvain.cuh  louvain_baseline.cuh  louvain_gl.cuh
include/mmio/: mmio_wrapper.h
include/partition/: edge_partition.cuh
src/: common.cu  main.cu
src/coarsen_graph/: coarsen_graph_mg.cu
src/graph/: gpu_graph.cu  host_graph.cpp
src/louvain/: louvain.cu  louvain_baseline.cu  louvain_gl.cu
src/mmio/: mmio.c  mmio_wrapper.cu
src/partition/: edge_partition.cu
